# modelspace-custom

./: .gitignore  CMakeLists.txt  README.md  install.sh
.devcontainer/: devcontainer.json
src/models/: SlopeIntercept.cpp  SlopeIntercept.h
swig/: ModelSpacePy.i  swigtemplate.txt
test/: test_SlopeIntercept.cpp  testtools.hpp
